[package]
name = "monies_macros"
version = "0.2.0"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2018"

[dependencies]
monies = { path = "../monies" }
paste = "1.0"
rust_decimal = "1.7"
rust_decimal_macros = "1.7"
lazy_static = "1.4"
num-traits = "0.2"

[dev-dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
